--- a/plugin.xml
+++ b/plugin.xml
@@ -248,6 +248,7 @@ The native map view is faster, use less network usage, display 3D views, and eve
             <!-- OpenGL ES version 2 -->
             <uses-feature android:glEsVersion="0x00020000" android:required="true" />
             <!-- GPS -->
+	    <uses-feature android:name="android.hardware.location" android:required="true" />
             <uses-feature android:name="android.hardware.location.gps" />
         </config-file>
 
